@@ -7,6 +7,7 @@ core 2.3.1 - not released yet
 	* Added: Catalan language. Credits to Carles Baiges Camprubí LaCol (www.lacol.org)
 	* Bugfix: Fixed css for error-messages of checkboxes
 	* Bugifx: Fixed styling of quickinfo
+	* Bugfix: Right requirement wasn't parsed correctly if there is only one rights-section
 
 core 2.3.0 - 2013-03-27
 	* Added: CSS-cropping of list table content
